<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.view.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp">


        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/userName"
            android:textColor="@color/customColor2"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/ed_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/tv_navigate_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/goToLogin"
            android:textColor="@color/purple_700"
            android:textFontWeight="800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/customColor2"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="@color/customColor2"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone"
            android:textColor="@color/customColor2"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/ed_name" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_navigate_to_login"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="96dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="96dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_navigate_to_login" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>